    - Add more space around text in question dialogs.
  * New partitioner: Allow changing the mount point for NTFS (LP: #90276).
  * Automatically unmount mounted partitions if they are on a changed
    partition table or they are to be mounted somewhere other than /media/*.
    Display an error and allow the user to try to unmount them manually if
    automatic unmounting fails (LP: #89605).
  * Add XS-Vcs-Bzr field to debian/control.

 -- Evan Dandrea <evand@ubuntu.com>  Mon,  5 Mar 2007 00:09:49 -0500

ubiquity (1.3.24) feisty; urgency=low

  * KDE Frontend:
    - Fix type problems in partition edit dialogue

 -- Jonathan Riddell <jriddell@ubuntu.com>  Thu,  1 Mar 2007 17:41:47 +0000

ubiquity (1.3.23) feisty; urgency=low

  * Enable migration-assistant by default. Replace --migration-assistant
    option with --no-migration-assistant.
  * Add a console-setup-apply script rather than hacking console-setup's
    post-base-installer script (which is being renamed and changed in ways
    that aren't appropriate for ubiquity).
  * Make sure we never try to remove the kernel package corresponding to the
    running kernel (LP: #86427).
  * Automatic update of included source packages: base-installer
    1.70ubuntu5, hw-detect 1.45ubuntu2, partman-base 100ubuntu5.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 28 Feb 2007 14:16:58 +0000

ubiquity (1.3.22) feisty; urgency=low

  [ Colin Watson ]
  * New partitioner:
    - Fix edit dialog not to try to resize partitions even if the resize
      spinbutton was left untouched (LP: #85227).
    - Add contextual buttons to GTK frontend (part of LP: #83166).
    - Add an undo facility.
    - partman-* updates add validation support (LP: #82768); also add
      XFS-on-/boot validation.
    - Break out of setting the mountpoint if it's invalid (LP: #84543).
  * Fix crash if multiple newworld boot partitions are present (LP: #84429).
  * GTK frontend:
    - Fix backup from user information page if migration-assistant is not