@@ -19,6 +19,8 @@ ubiquity (1.3.25) UNRELEASED; urgency=low
     partition table or they are to be mounted somewhere other than /media/*.
     Display an error and allow the user to try to unmount them manually if
     automatic unmounting fails (LP: #89605).
+  * Work around datetime misbehaviour if the system clock is set before the
+    Unix epoch (LP: #57952).
   * Add XS-Vcs-Bzr field to debian/control.
 
  -- Evan Dandrea <evand@ubuntu.com>  Mon,  5 Mar 2007 00:09:49 -0500
